--- a/templates/recipes.ejs
+++ b/templates/recipes.ejs
@@ -83,23 +83,50 @@
             const recipeName=prompt("Put in the name of the recipe you want to open?");
             await fetch(`/open/winner/${recipeName}`);
            }
-            async function SaveAs(){
-                const recipeName=await prompt("Put in the name you want to give the recipe?");
+           async function Write(recipeName){
                 const recipe=document.getElementById("recipe").textContent;
-                const save=new XMLHttpRequest();
-                save.open("POST", `/saveAs/${sessionStorage.getItem("username")}/${recipeName}/${recipeName}`, true);
-                save.setRequestHeader("Content-Type", "text/html");
-                save.onreadystatechange=function(){
+                const writer=new XMLHttpRequest();
+                writer.open("POST", `/saveAs/${sessionStorage.getItem("username")}/${recipeName}/${recipeName}`, true);
+                writer.setRequestHeader("Content-Type", "text/json");
+                writer.onreadystatechange=function(){
                     if(save.readyState==4){
                         if(save.status==200||save.status==201){
                             alert("Save successful");
                         }
                         else
-                           alert("Unable to save recipe");
+                          alert("Unable to save recipe");
                     }
                 }
-                save.send();
-            }
+                writer.send();
+           }
+           async function SaveAs(){
+                const recipeName=await prompt("Put in the name you want to give the recipe?");
+                Write(recipeName);
+                sessionStorage.setItem("recipe name", recipeName);
+           }
+           async function Save(){
+              if(sessionStorage.getItem("recipe name")===null){
+                SaveAs();
+              }
+              else{
+                alert(sessionStorage.getItem("username"));
+                const recipe=ingredients;
+                const save=new XMLHttpRequest();
+                save.open("PUT", `/save/${sessionStorage.getItem("username")}/${sessionStorage.getItem("recipe name")}/${recipe}`);
+                save.setRequestHeader("Content-Type", "text/json");
+                save.onreadystatechange=function(){
+                    if(save.readyState==4){
+                        if(save.status==200||save.status==201)
+                          alert("Successfully saved "+sessionStorage.getItem("recipe name"));
+                    }
+                    else{
+                        alert("Unable to save "+sessionStorage.getItem("recipe name"));
+                    }
+                }
+                 save.send();
+              }
+             
+           }
         </script>
         <style>
             #ingredient-info{
@@ -134,7 +161,7 @@
         <nav>
             <span class="menu-option">New</span>
             <span class="menu-option" onclick="Open()">Open</span>
-            <span class="menu-option">Save</span>
+            <span class="menu-option" onclick="Save()">Save</span>
             <span class="menu-option" onclick="SaveAs()">Save As</span>
             <span class="menu-option">Delete</span>
         </nav>
