--- a/templates/recipes.ejs
+++ b/templates/recipes.ejs
@@ -3,15 +3,19 @@
         <title>Your Recipes</title>
         <script>
             class Ingredient{
-    constructor(amount, unit, name){
-        this.amount=amount;
-        this.unit=unit;
-        this.name=name;
-     }
-     toString(){
-          return `${this.amount} ${this.unit} of ${this.name}`;
-      }
-     }
+              constructor(amount, unit, name){
+                this.amount=amount;
+                this.unit=unit;
+                this.name=name;
+              }
+              toString(){
+                //No "s" at the end if there is exactly one
+                if(this.amount==1)
+                 return `${this.amount} ${this.unit} of ${this.name}`;
+                else
+                 return `${this.amount} ${this.unit}s of ${this.name}`;
+             }
+          }
      const ingredients=[];
      function AddIngredient(){
     
@@ -20,7 +24,7 @@
         explanation.textContent="Enter Ingredient and Proportions Below";
         ingredient.appendChild(explanation);
         ingredient.style.display="block";
-         const UNITS=["Cups", "Tablespoons", "Teaspoons"];
+         const UNITS=["Cup", "Tablespoon", "Teaspoon"];
          const amount=document.createElement("input");
          amount.id="Amount";
          amount.setAttribute("type", "number");
@@ -28,6 +32,7 @@
          amount.setAttribute("required", true);
          amount.setAttribute("min", 0);
          const unitSelection=document.createElement("select");
+         unitSelection.id="units";
          for(let current of UNITS){
             const unitOption=document.createElement("option");
             unitOption.textContent=current;
@@ -56,7 +61,7 @@
                 ok.addEventListener("click", function(){
                     
                     if(document.getElementById("name").value.length>0){
-                        const newIngredient=new Ingredient(document.getElementById("amount").value, unitSelection.value, document.getElementById("name").value)
+                        const newIngredient=new Ingredient(document.getElementById("amount").value, document.getElementById("units").value, document.getElementById("name").value)
                         ingredients.push(newIngredient);
                         const description=document.createElement("li");
                         description.textContent=newIngredient.toString();
